Bootstrap installers with jig 0.16.2